Enhanced The Level Of Protection for Sensitive Data

--- a/k8s/base/app-config.env
+++ b/k8s/base/app-config.env
@@ -1,14 +1,22 @@
-connection_string=Host=db.default.svc.cluster.local;Port=5432;Database=*database*;Username=*username*;Password=*password*
-auth_token_issuer=* JSON Web Token (JWT) Issuer Name *
-auth_token_audience=* JSON Web Token (JWT) Audience Name *
-auth_token_expiration=* JSON Web Token (JWT) Expiration Time (.NET TimeSpan Convention) *
-reset_token_url=* The URL to WebSite where email with reset password token links to *
-reset_token_expiration=* The Reset Password Token Expiration (Minimum 1 min, Maximum 1 day) *
-rabbitmq_connection_string=amqp://*login*:*password*@rabbit-mq.default.svc.cluster.local:5672"
-rabbitmq_queue_name=* RabbitMQ Notification Queue Name *"
-cache_connection_string=redis://*login*:*password*@redis.default.svc.cluster.local:6379"
-smtp_email_name=* Name from which the email letter will be sent *"
-smtp_email_address=* Email Address from which the email letter will be sent*"
-smtp_host=* Host of SMTP Server *"
-smtp_port=* Port of SMTP Server *
-smtp_ssl=* Is SSL Used? (true/false) *
+db.host=db.default.svc.cluster.local
+db.port=5432
+db.name=postgres
+
+auth_token.issuer=* JSON Web Token (JWT) Issuer Name *
+auth_token.audience=* JSON Web Token (JWT) Audience Name *
+auth_token.expiration=* JSON Web Token (JWT) Expiration Time (.NET TimeSpan Convention) *
+
+reset_token.url=* The URL to WebSite where email with reset password token links to *
+reset_token.expiration=* The Reset Password Token Expiration (Minimum 1 min, Maximum 1 day) *
+
+rabbit.host=rabbit-mq.default.svc.cluster.local
+rabbit.port=5672
+rabbit.queue=* RabbitMQ Notification Queue Name *
+
+cache.conn_string=redis.default.svc.cluster.local:6379
+
+smtp.name=* Name from which the email letter will be sent *
+smtp.address=* Email Address from which the email letter will be sent*
+smtp.host=* Host of SMTP Server *
+smtp.port=* Port of SMTP Server *
+smtp.use_ssl=* Is SSL Used? (true/false) *
