--- a/k8s/base/app-secrets.env
+++ b/k8s/base/app-secrets.env
@@ -1,3 +1,10 @@
-auth_token_key=* JSON Web Token (JWT) Secret Key (Minimum 384 bits) *
-smtp_login=* Login for SMTP Server *
-smtp_password=* Password for SMTP Server *
+db.user=* Database Username *
+db.pass=* Database Password *
+
+auth_token.key=* JSON Web Token (JWT) Secret Key (Minimum 384 bits) *
+
+rabbit.user=guest
+rabbit.pass=guest
+
+smtp.user=* Login for SMTP Server *
+smtp.pass=* Password for SMTP Server *
