Optimized Manifests using Resources Limits and Security Context

--- a/k8s/base/manifests/03_rabbit-sts.yml
+++ b/k8s/base/manifests/03_rabbit-sts.yml
@@ -34,4 +34,12 @@ spec:
             initialDelaySeconds: 60
             periodSeconds: 30
             timeoutSeconds: 10
+
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
     
