--- a/k8s/base/manifests/07_users-deploy.yml
+++ b/k8s/base/manifests/07_users-deploy.yml
@@ -16,6 +16,10 @@ spec:
         app.kubernetes.io/name: users-pod
         app.kubernetes.io/component: users-api
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+
       initContainers:
         - name: wait-db
           image: postgres:16-alpine
