--- a/k8s/base/manifests/01_database-sts.yml
+++ b/k8s/base/manifests/01_database-sts.yml
@@ -52,6 +52,30 @@ spec:
 
             - mountPath: /var/lib/postgresql/data
               name: db-pvc
+          
+          readinessProbe:
+            exec:
+              command: ["sh", "-c", "pg_isready"]
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
+            periodSeconds: 5
+            failureThreshold: 5
+
+          livenessProbe:
+            exec:
+              command: ["sh", "-c", "pg_isready"]
+            initialDelaySeconds: 30
+            timeoutSeconds: 5
+            periodSeconds: 15
+            failureThreshold: 5
+
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
 
 
       volumes:
