--- a/k8s/base/manifests/05_redis-sts.yml
+++ b/k8s/base/manifests/05_redis-sts.yml
@@ -42,3 +42,11 @@ spec:
             periodSeconds: 30
             timeoutSeconds: 5
             failureThreshold: 5
+
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256"
+              cpu: "200m"
