--- a/k8s/base/manifests/12_gateway-deploy.yml
+++ b/k8s/base/manifests/12_gateway-deploy.yml
@@ -13,6 +13,10 @@ spec:
         app.kubernetes.io/name: api-gateway
         app.kubernetes.io/component: api-gateway
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+
       initContainers:
         - name: users-svc
           image: curlimages/curl:latest
