--- a/k8s/base/manifests/05_redis-sts.yml
+++ b/k8s/base/manifests/05_redis-sts.yml
@@ -48,5 +48,5 @@ spec:
               memory: "128Mi"
               cpu: "100m"
             limits:
-              memory: "256"
+              memory: "256Mi"
               cpu: "200m"
